# VAEaaS

./: README.md  main.py  pyproject.toml
cli/: decode_dataset.py  download_mlflow.py  encode_dataset.py  register_kvae.py  show_latents.py  upload2mlflow.py
src/: config.py
src/repositories/: mlflow.py
src/utils/: decoder.py  encoder.py  sft_reader.py
