[project]
name = "vaeaas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.6.1",
    "torch",
    "torchvision",
    "matplotlib",
    "pillow",
    "safetensors",
    "huggingface-hub",
    "transformers>=4.41",
    "accelerate>=1.0",
    "diffusers @ git+https://github.com/huggingface/diffusers.git",
    "mlflow>=3.11.1",
    "boto3>=1.42.96",
]

# Сборки torch/torchvision с CUDA (см. https://pytorch.org/get-started/locally/ )
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
